fix file path issue -> assume dates.txt will be in resources folder